// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shadow component tests Brand shadow (depth=2) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 1,
      }
    }
  >
    <Text>
      Brand shadow (depth=2)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=4) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 2,
      }
    }
  >
    <Text>
      Brand shadow (depth=4)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=8) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 4,
      }
    }
  >
    <Text>
      Brand shadow (depth=8)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=16) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 8,
      }
    }
  >
    <Text>
      Brand shadow (depth=16)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=28) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 14,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 14,
      }
    }
  >
    <Text>
      Brand shadow (depth=28)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Brand shadow (depth=64) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 32,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 32,
      }
    }
  >
    <Text>
      Brand shadow (depth=64)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Pressable that has a shadow vs. pressable without shadow 1`] = `
<View>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 0,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 1,
      }
    }
  >
    <View
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "red",
          "shadowColor": "#000000",
          "shadowOffset": {
            "height": 8,
            "width": 0,
          },
          "shadowOpacity": 0.14,
          "shadowRadius": 8,
        }
      }
    />
  </View>
  <View>
    <View
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "red",
        }
      }
    />
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=2) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 1,
      }
    }
  >
    <Text>
      Shadow (depth=2)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=4) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 2,
      }
    }
  >
    <Text>
      Shadow (depth=4)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=8) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 4,
      }
    }
  >
    <Text>
      Shadow (depth=8)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=16) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 8,
      }
    }
  >
    <Text>
      Shadow (depth=16)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=28) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 14,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 14,
      }
    }
  >
    <Text>
      Shadow (depth=28)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow (depth=64) 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.2,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 32,
          "width": 0,
        },
        "shadowOpacity": 0.24,
        "shadowRadius": 32,
      }
    }
  >
    <Text>
      Shadow (depth=64)
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow on a child with border radius 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "borderRadius": 2,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "borderRadius": 2,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 8,
      }
    }
  >
    <Text>
      {"borderRadius":2}
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow on a child with border width 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "borderWidth": 2,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 8,
      }
    }
  >
    <Text>
      {"borderWidth":2}
    </Text>
  </View>
</View>
`;

exports[`Shadow component tests Shadow on a child with margin and padding 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
      "margin": 2,
      "shadowColor": "#000000",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "red",
        "padding": 2,
        "shadowColor": "#000000",
        "shadowOffset": {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 8,
      }
    }
  >
    <Text>
      {"margin":2,"padding":2}
    </Text>
  </View>
</View>
`;
